Fix page alignments, update mailbox message

--- a/docs/browserbug/studio/studio.css
+++ b/docs/browserbug/studio/studio.css
@@ -19,6 +19,10 @@ p{
 
 }
 
+.dropdown-arrow {
+    width: 14px;
+    opacity: 60%;
+}
 
 .toggler{
     cursor: pointer;
